--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,25 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		 <title>Mongo Scraper</title>
-       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-			 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
-			 <link href="https://fonts.googleapis.com/css?family=Roboto%7CRoboto+Slab" rel="stylesheet">
-       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+<head>
+	<meta charset="UTF-8">
+	<title>Mongo Scrape</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link href="https://fonts.googleapis.com/css?family=IBM+Plex+Serif" rel="stylesheet">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 
-			 <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
-	</head>
+	<link rel="stylesheet" type="text/css" href="/assets/css/style.css">
+</head>
 
-	<body>
-		{{{ body }}}
+<body>
+	<nav class="navbar navbar-default">
+		<div class="">
+			<ul class="nav navbar-nav">
+				<li class="active">
+					<a href="/">NBA TRANSACTION SCRAPER</a>
+				</li>
+				<li>
+					<a id="saved" href="/saved">Saved Transactions</a>
+				</li>
+			</ul>
+			<form class="navbar-form navbar-left" action="/api/fetch" method="get">
+				<button class="btn btn-secondary scrape">Scrape New Transactions!</button>
+			</form>
+		</div>
+	</nav>
+	{{{ body }}}
 
-		<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/4.4.0/bootbox.min.js"></script>
-    	<script src="assets/js/app.js"></script>
+	<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/4.4.0/bootbox.min.js"></script>
+	<script src="assets/js/app.js"></script>
 
-	</body>
+</body>
+
 </html>
