--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,26 +9,32 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-
 	<link rel="stylesheet" type="text/css" href="/assets/css/style.css">
 </head>
 
 <body>
-	<nav class="navbar navbar-default">
-		<div class="">
-			<ul class="nav navbar-nav">
-				<li class="active">
-					<a href="/">NBA TRANSACTION SCRAPER</a>
-				</li>
-				<li>
-					<a id="saved" href="/saved">Saved Transactions</a>
-				</li>
-			</ul>
-			<form class="navbar-form navbar-left" action="/api/fetch" method="get">
-				<button class="btn btn-secondary scrape">Scrape New Transactions!</button>
-			</form>
-		</div>
-	</nav>
+	<div class="container">
+		<nav class="navbar-dark">
+			<div class="">
+				<ul class="nav navbar-nav">
+					<li class="active logo">
+						<a href="/">NBA TRANSACTION SCRAPER</a>
+					</li>
+				</ul>
+				<ul class="nav navbar-nav navbar-right">
+					<li>
+						<a id="saved" href="/saved">Saved Transactions</a>
+					</li>
+				</ul>
+			</div>
+		</nav>
+
+	</div>
+	<div class="col-xl-4 text-center">
+		<form action="/api/fetch" method="get">
+			<button class="btn btn-secondary btn-lg scrape">Scrape New Transactions!</button>
+		</form>
+	</div>
 	{{{ body }}}
 
 	<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
