--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,7 +2,7 @@
 
   {{#each articles }}
   <div class="center-block">
-    <div class="panel panel-default">
+    <div class="panel article panel-default">
       <div class="panel-body">
         <h1>{{dateoftrans}}</h1>
         <p>PLAYER: {{player}}</p>
