--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -1,7 +1,7 @@
 <div class="savedArt articles">
     <ul>
         {{#each articles }}
-        <div class="panel panel-default center-block">
+        <div class="panel article panel-default center-block">
             <div class="panel-body">
                 <h1>{{dateoftrans}}</h1>
                 <p>{{team}}</p>
